--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
                                 </li>
                                 <!-- /.nav-item -->
                                 <li class="header-nav__item">
-                                    <a href="#completed" class="header-nav__link">Реализованные проекты</a>
+                                    <a href="#projects" class="header-nav__link">Реализованные проекты</a>
                                     <!-- /.nav-link -->
                                 </li>
                                 <!-- /.nav-item -->
@@ -296,6 +296,13 @@
                 <!-- /.container -->
             </section>
             <!-- /#type.type -->
+            <section class="section-projects projects" id="projects">
+                <div class="container">
+
+                </div>
+                <!-- /.container -->
+            </section>
+            <!-- /#projects.section-projects projects -->
         </main>
     </div>
     <!-- /.wrapper -->
