--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -298,7 +298,8 @@
             <!-- /#type.type -->
             <section class="section-projects projects" id="projects">
                 <div class="container">
-
+                    <h1 class="section-title projects__title">Реализованные проекты</h1>
+                    <span class="section-subtitle projects__subtitle">Более 100 компаний уже решают свои бизнес – задачи с помощью наших макетов</span>
                 </div>
                 <!-- /.container -->
             </section>
