--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Yandex.Metrika counter -->
+    <script>(function (a, e, f, g, b, c, d) { a[b] = a[b] || function () { (a[b].a = a[b].a || []).push(arguments) }; a[b].l = 1 * new Date(); c = e.createElement(f), d = e.getElementsByTagName(f)[0], c.async = 1, c.src = g, d.parentNode.insertBefore(c, d) })(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); ym(52877959, "init", { clickmap: true, trackLinks: true, accurateTrackBounce: true, webvisor: true });</script>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/52877959" style="position:absolute; left:-9999px;" alt="" /></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
     <div class="wrapper">
         <main>
             <header class="header">
