--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -306,6 +306,41 @@
                 <div class="container">
                     <h1 class="section-title projects__title">Реализованные проекты</h1>
                     <span class="section-subtitle projects__subtitle">Более 100 компаний уже решают свои бизнес – задачи с помощью наших макетов</span>
+                    <div class="slider">
+                        <div class="slider__item">
+                            <img src="img/projects/slide1.jpg" alt="slide1" class="slider__image">
+                            <div class="slider-project">
+                                <h4 class="slider__title">Порт Артек</h4>
+                                <div class="slider-block">
+                                    <span class="slider__description">Описание:</span>
+                                    <!-- /.slider__description -->
+                                    <p class="slider__name">Презентация порта Артек для первых лиц государства</p>
+                                    <!-- /.skider__name -->
+                                </div>
+                                <!-- /.slider-block -->
+                                <div class="content">
+                                    <div class="content-scale">
+                                        <h6 class="content__title">Масштаб:</h6>
+                                        <p class="content__text">1:200</p>
+                                    </div>
+                                    <!-- /.slider-scale -->
+                                    <div class="content-size">
+                                        <h6 class="content__title">Размер:</h6>
+                                        <p class="content__text">1000х2000</p>
+                                    </div>
+                                    <!-- /.slider-size -->
+                                    <div class="content-deadlines">
+                                        <h6 class="content__title">Срок изготовления:</h6>
+                                        <p class="content__text">40 дней</p>
+                                    </div>
+                                    <!-- /.slider-deadlines -->
+                                </div>
+                                <!-- /.slider-content -->
+                            </div>
+                            <!-- /.slider-content -->
+                        </div>
+                        <!-- /.slider__item -->
+                    </div>
                 </div>
                 <!-- /.container -->
             </section>
@@ -317,6 +352,7 @@
     <!-- <script src="js/jquery.validate.min.js"></script> -->
     <!-- <script src="js/jquery.maskedinput.min.js"></script> -->
     <!-- <script src="js/jquery.validate.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
