--- a/src/index.html
+++ b/src/index.html
@@ -336,6 +336,81 @@
                                     <!-- /.slider-deadlines -->
                                 </div>
                                 <!-- /.slider-content -->
+                                <div class="content-button">
+                                    <button class="content__button">Заказать макет</button>
+                                </div>
+                            </div>
+                            <!-- /.slider-content -->
+                        </div>
+                        <!-- /.slider__item -->
+                        <div class="slider__item">
+                            <img src="img/projects/slide1.jpg" alt="slide1" class="slider__image">
+                            <div class="slider-project">
+                                <h4 class="slider__title">Порт Артек</h4>
+                                <div class="slider-block">
+                                    <span class="slider__description">Описание:</span>
+                                    <!-- /.slider__description -->
+                                    <p class="slider__name">Презентация порта Артек для первых лиц государства</p>
+                                    <!-- /.skider__name -->
+                                </div>
+                                <!-- /.slider-block -->
+                                <div class="content">
+                                    <div class="content-scale">
+                                        <h6 class="content__title">Масштаб:</h6>
+                                        <p class="content__text">1:200</p>
+                                    </div>
+                                    <!-- /.slider-scale -->
+                                    <div class="content-size">
+                                        <h6 class="content__title">Размер:</h6>
+                                        <p class="content__text">1000х2000</p>
+                                    </div>
+                                    <!-- /.slider-size -->
+                                    <div class="content-deadlines">
+                                        <h6 class="content__title">Срок изготовления:</h6>
+                                        <p class="content__text">40 дней</p>
+                                    </div>
+                                    <!-- /.slider-deadlines -->
+                                </div>
+                                <!-- /.slider-content -->
+                                <div class="content-button">
+                                    <button class="content__button">Заказать макет</button>
+                                </div>
+                            </div>
+                            <!-- /.slider-content -->
+                        </div>
+                        <!-- /.slider__item -->
+                        <div class="slider__item">
+                            <img src="img/projects/slide1.jpg" alt="slide1" class="slider__image">
+                            <div class="slider-project">
+                                <h4 class="slider__title">Порт Артек</h4>
+                                <div class="slider-block">
+                                    <span class="slider__description">Описание:</span>
+                                    <!-- /.slider__description -->
+                                    <p class="slider__name">Презентация порта Артек для первых лиц государства</p>
+                                    <!-- /.skider__name -->
+                                </div>
+                                <!-- /.slider-block -->
+                                <div class="content">
+                                    <div class="content-scale">
+                                        <h6 class="content__title">Масштаб:</h6>
+                                        <p class="content__text">1:200</p>
+                                    </div>
+                                    <!-- /.slider-scale -->
+                                    <div class="content-size">
+                                        <h6 class="content__title">Размер:</h6>
+                                        <p class="content__text">2000х3000</p>
+                                    </div>
+                                    <!-- /.slider-size -->
+                                    <div class="content-deadlines">
+                                        <h6 class="content__title">Срок изготовления:</h6>
+                                        <p class="content__text">40 дней</p>
+                                    </div>
+                                    <!-- /.slider-deadlines -->
+                                </div>
+                                <!-- /.slider-content -->
+                                <div class="content-button">
+                                    <button class="content__button">Заказать макет</button>
+                                </div>
                             </div>
                             <!-- /.slider-content -->
                         </div>
