--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -306,116 +306,127 @@
                 <div class="container">
                     <h1 class="section-title projects__title">Реализованные проекты</h1>
                     <span class="section-subtitle projects__subtitle">Более 100 компаний уже решают свои бизнес – задачи с помощью наших макетов</span>
-                    <div class="slider">
-                        <div class="slider__item">
-                            <img src="img/projects/slide1.jpg" alt="slide1" class="slider__image">
-                            <div class="slider-project">
-                                <h4 class="slider__title">Порт Артек</h4>
-                                <div class="slider-block">
-                                    <span class="slider__description">Описание:</span>
-                                    <!-- /.slider__description -->
-                                    <p class="slider__name">Презентация порта Артек для первых лиц государства</p>
-                                    <!-- /.skider__name -->
-                                </div>
-                                <!-- /.slider-block -->
-                                <div class="content">
-                                    <div class="content-scale">
-                                        <h6 class="content__title">Масштаб:</h6>
-                                        <p class="content__text">1:200</p>
+                    <div class="wrap-slide">
+                        <div class="slider">
+                            <div class="slider__item">
+                                <img src="img/projects/slide1.jpg" alt="slide1" class="slider__image">
+                                <div class="slider-project">
+                                    <h4 class="slider__title">Порт Артек</h4>
+                                    <div class="slider-block">
+                                        <span class="slider__description">Описание:</span>
+                                        <!-- /.slider__description -->
+                                        <p class="slider__name">Презентация порта Артек для первых лиц государства</p>
+                                        <!-- /.skider__name -->
                                     </div>
-                                    <!-- /.slider-scale -->
-                                    <div class="content-size">
-                                        <h6 class="content__title">Размер:</h6>
-                                        <p class="content__text">1000х2000</p>
+                                    <!-- /.slider-block -->
+                                    <div class="content">
+                                        <div class="content-scale">
+                                            <h6 class="content__title">Масштаб:</h6>
+                                            <p class="content__text">1:200</p>
+                                        </div>
+                                        <!-- /.slider-scale -->
+                                        <div class="content-size">
+                                            <h6 class="content__title">Размер:</h6>
+                                            <p class="content__text">1000х2000</p>
+                                        </div>
+                                        <!-- /.slider-size -->
+                                        <div class="content-deadlines">
+                                            <h6 class="content__title">Срок изготовления:</h6>
+                                            <p class="content__text">40 дней</p>
+                                        </div>
+                                        <!-- /.slider-deadlines -->
                                     </div>
-                                    <!-- /.slider-size -->
-                                    <div class="content-deadlines">
-                                        <h6 class="content__title">Срок изготовления:</h6>
-                                        <p class="content__text">40 дней</p>
+                                    <!-- /.slider-content -->
+                                    <div class="content-button">
+                                        <button class="content__button">Заказать макет</button>
                                     </div>
-                                    <!-- /.slider-deadlines -->
-                                </div>
-                                <!-- /.slider-content -->
-                                <div class="content-button">
-                                    <button class="content__button">Заказать макет</button>
-                                </div>
-                            </div>
-                            <!-- /.slider-content -->
-                        </div>
-                        <!-- /.slider__item -->
-                        <div class="slider__item">
-                            <img src="img/projects/slide1.jpg" alt="slide1" class="slider__image">
-                            <div class="slider-project">
-                                <h4 class="slider__title">Порт Артек</h4>
-                                <div class="slider-block">
-                                    <span class="slider__description">Описание:</span>
-                                    <!-- /.slider__description -->
-                                    <p class="slider__name">Презентация порта Артек для первых лиц государства</p>
-                                    <!-- /.skider__name -->
-                                </div>
-                                <!-- /.slider-block -->
-                                <div class="content">
-                                    <div class="content-scale">
-                                        <h6 class="content__title">Масштаб:</h6>
-                                        <p class="content__text">1:200</p>
-                                    </div>
-                                    <!-- /.slider-scale -->
-                                    <div class="content-size">
-                                        <h6 class="content__title">Размер:</h6>
-                                        <p class="content__text">1000х2000</p>
-                                    </div>
-                                    <!-- /.slider-size -->
-                                    <div class="content-deadlines">
-                                        <h6 class="content__title">Срок изготовления:</h6>
-                                        <p class="content__text">40 дней</p>
-                                    </div>
-                                    <!-- /.slider-deadlines -->
                                 </div>
                                 <!-- /.slider-content -->
-                                <div class="content-button">
-                                    <button class="content__button">Заказать макет</button>
-                                </div>
                             </div>
-                            <!-- /.slider-content -->
-                        </div>
-                        <!-- /.slider__item -->
-                        <div class="slider__item">
-                            <img src="img/projects/slide1.jpg" alt="slide1" class="slider__image">
-                            <div class="slider-project">
-                                <h4 class="slider__title">Порт Артек</h4>
-                                <div class="slider-block">
-                                    <span class="slider__description">Описание:</span>
-                                    <!-- /.slider__description -->
-                                    <p class="slider__name">Презентация порта Артек для первых лиц государства</p>
-                                    <!-- /.skider__name -->
-                                </div>
-                                <!-- /.slider-block -->
-                                <div class="content">
-                                    <div class="content-scale">
-                                        <h6 class="content__title">Масштаб:</h6>
-                                        <p class="content__text">1:200</p>
+                            <!-- /.slider__item -->
+                            <div class="slider__item">
+                                <img src="img/projects/slide1.jpg" alt="slide1" class="slider__image">
+                                <div class="slider-project">
+                                    <h4 class="slider__title">Порт Артек</h4>
+                                    <div class="slider-block">
+                                        <span class="slider__description">Описание:</span>
+                                        <!-- /.slider__description -->
+                                        <p class="slider__name">Презентация порта Артек для первых лиц государства</p>
+                                        <!-- /.skider__name -->
                                     </div>
-                                    <!-- /.slider-scale -->
-                                    <div class="content-size">
-                                        <h6 class="content__title">Размер:</h6>
-                                        <p class="content__text">2000х3000</p>
+                                    <!-- /.slider-block -->
+                                    <div class="content">
+                                        <div class="content-scale">
+                                            <h6 class="content__title">Масштаб:</h6>
+                                            <p class="content__text">3:250</p>
+                                        </div>
+                                        <!-- /.slider-scale -->
+                                        <div class="content-size">
+                                            <h6 class="content__title">Размер:</h6>
+                                            <p class="content__text">1500х2500</p>
+                                        </div>
+                                        <!-- /.slider-size -->
+                                        <div class="content-deadlines">
+                                            <h6 class="content__title">Срок изготовления:</h6>
+                                            <p class="content__text">60 дней</p>
+                                        </div>
+                                        <!-- /.slider-deadlines -->
                                     </div>
-                                    <!-- /.slider-size -->
-                                    <div class="content-deadlines">
-                                        <h6 class="content__title">Срок изготовления:</h6>
-                                        <p class="content__text">40 дней</p>
+                                    <!-- /.slider-content -->
+                                    <div class="content-button">
+                                        <button class="content__button">Заказать макет</button>
                                     </div>
-                                    <!-- /.slider-deadlines -->
                                 </div>
                                 <!-- /.slider-content -->
-                                <div class="content-button">
-                                    <button class="content__button">Заказать макет</button>
-                                </div>
                             </div>
-                            <!-- /.slider-content -->
+                            <!-- /.slider__item -->
+                            <div class="slider__item">
+                                <img src="img/projects/slide1.jpg" alt="slide1" class="slider__image">
+                                <div class="slider-project">
+                                    <h4 class="slider__title">Порт Артек</h4>
+                                    <div class="slider-block">
+                                        <span class="slider__description">Описание:</span>
+                                        <!-- /.slider__description -->
+                                        <p class="slider__name">Презентация порта Артек для первых лиц государства</p>
+                                        <!-- /.skider__name -->
+                                    </div>
+                                    <!-- /.slider-block -->
+                                    <div class="content">
+                                        <div class="content-scale">
+                                            <h6 class="content__title">Масштаб:</h6>
+                                            <p class="content__text">2:000</p>
+                                        </div>
+                                        <!-- /.slider-scale -->
+                                        <div class="content-size">
+                                            <h6 class="content__title">Размер:</h6>
+                                            <p class="content__text">2000х3000</p>
+                                        </div>
+                                        <!-- /.slider-size -->
+                                        <div class="content-deadlines">
+                                            <h6 class="content__title">Срок изготовления:</h6>
+                                            <p class="content__text">100 дней</p>
+                                        </div>
+                                        <!-- /.slider-deadlines -->
+                                    </div>
+                                    <!-- /.slider-content -->
+                                    <div class="content-button">
+                                        <button class="content__button">Заказать макет</button>
+                                    </div>
+                                </div>
+                                <!-- /.slider-content -->
+                            </div>
+                            <!-- /.slider__item -->
                         </div>
-                        <!-- /.slider__item -->
+                        <div class="arrows projects__arrows">
+                            <div class="arrows__left">
+                                <img src="img/projects/arrow_left.png" alt="arrow_left">
+                            </div>
+                            <div class="arrows__right">
+                                <img src="img/projects/arrow_right.png" alt="arrow_right">
+                            </div>
+                        </div>
                     </div>
+                    
                 </div>
                 <!-- /.container -->
             </section>
