--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -345,13 +345,13 @@
                             </div>
                             <!-- /.slider__item -->
                             <div class="slider__item">
-                                <img src="img/projects/slide1.jpg" alt="slide1" class="slider__image">
+                                <img src="img/projects/slide2.jpg" alt="slide2" class="slider__image">
                                 <div class="slider-project">
-                                    <h4 class="slider__title">Порт Артек</h4>
+                                    <h4 class="slider__title">Home Interiors</h4>
                                     <div class="slider-block">
                                         <span class="slider__description">Описание:</span>
                                         <!-- /.slider__description -->
-                                        <p class="slider__name">Презентация порта Артек для первых лиц государства</p>
+                                        <p class="slider__name">Презентация проекта дизайна интерьера ресторана</p>
                                         <!-- /.skider__name -->
                                     </div>
                                     <!-- /.slider-block -->
@@ -381,13 +381,13 @@
                             </div>
                             <!-- /.slider__item -->
                             <div class="slider__item">
-                                <img src="img/projects/slide1.jpg" alt="slide1" class="slider__image">
+                                <img src="img/projects/slide3.jpg" alt="slide3" class="slider__image">
                                 <div class="slider-project">
-                                    <h4 class="slider__title">Порт Артек</h4>
+                                    <h4 class="slider__title">Отель Morpheus</h4>
                                     <div class="slider-block">
                                         <span class="slider__description">Описание:</span>
                                         <!-- /.slider__description -->
-                                        <p class="slider__name">Презентация порта Артек для первых лиц государства</p>
+                                        <p class="slider__name">Представляем подборку самых впечатляющих архитектурных проектов</p>
                                         <!-- /.skider__name -->
                                     </div>
                                     <!-- /.slider-block -->
