--- a/src/index.html
+++ b/src/index.html
@@ -426,11 +426,13 @@
                             </div>
                         </div>
                     </div>
-                    
                 </div>
                 <!-- /.container -->
             </section>
             <!-- /#projects.section-projects projects -->
+            <section class="equipment" id="equipment">
+                <div class="container"></div>
+            </section>
         </main>
     </div>
     <!-- /.wrapper -->
