--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -430,7 +430,7 @@
                 <!-- /.container -->
             </section>
             <!-- /#projects.section-projects projects -->
-            <section class="equipment" id="equipment">
+            <section class="section-equipment equipment" id="equipment">
                 <div class="container"></div>
             </section>
         </main>
