--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -431,7 +431,9 @@
             </section>
             <!-- /#projects.section-projects projects -->
             <section class="section-equipment equipment" id="equipment">
-                <div class="container"></div>
+                <div class="container">
+                    <h3 class="equipment__title">Все макеты, изготовленные нашей макетной мастерской, помогли клиентам выполнить поставленные цели, а именно:</h3>
+                </div>
             </section>
         </main>
     </div>
