--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -433,6 +433,81 @@
             <section class="section-equipment equipment" id="equipment">
                 <div class="container">
                     <h3 class="equipment__title">Все макеты, изготовленные нашей макетной мастерской, помогли клиентам выполнить поставленные цели, а именно:</h3>
+                    <div class="equipments-block">
+                        <div class="equipments">
+                            <div class="equipments__image">
+                                <img src="img/equipment/equipment1.png" alt="equipment1">
+                            </div>
+                            <!-- /.equipment__image -->
+                            <p class="equipments__text">Продать квартиру, дом, участок, объект.</p>
+                            <!-- /.equipment__text -->
+                        </div>
+                        <!-- /.equipment -->
+                        <div class="equipments">
+                            <div class="equipments__image">
+                                <img src="img/equipment/equipment2.png" alt="equipment2">
+                            </div>
+                            <!-- /.equipment__image -->
+                            <p class="equipments__text">Привлечь инвестиции в проект.</p>
+                            <!-- /.equipment__text -->
+                        </div>
+                        <!-- /.equipment -->
+                        <div class="equipments">
+                            <div class="equipments__image">
+                                <img src="img/equipment/equipment3.png" alt="equipment3">
+                            </div>
+                            <!-- /.equipment__image -->
+                            <p class="equipments__text">Наглядно представить объект посетителю с целью ознакомления с территорией, зданием.</p>
+                            <!-- /.equipment__text -->
+                        </div>
+                        <!-- /.equipment -->
+                        <div class="equipments">
+                            <div class="equipments__image">
+                                <img src="img/equipment/equipment4.png" alt="equipment4">
+                            </div>
+                            <!-- /.equipment__image -->
+                            <p class="equipments__text">Представить проект первым лицам государства, компании.</p>
+                            <!-- /.equipment__text -->
+                        </div>
+                        <!-- /.equipment -->
+                        <div class="equipments">
+                            <div class="equipments__image">
+                                <img src="img/equipment/equipment8.png" alt="equipment8">
+                            </div>
+                            <!-- /.equipment__image -->
+                            <p class="equipments__text">Обучение сотрудников, военнослужащих, студентов и т.д.</p>
+                            <!-- /.equipment__text -->
+                        </div>
+                        <!-- /.equipment -->
+                        <div class="equipments">
+                            <div class="equipments__image">
+                                <img src="img/equipment/equipment7.png" alt="equipment7">
+                            </div>
+                            <!-- /.equipment__image -->
+                            <p class="equipments__text">Получить разрешение на строительство, согласование проекта.</p>
+                            <!-- /.equipment__text -->
+                        </div>
+                        <!-- /.equipment -->
+                        <div class="equipments">
+                            <div class="equipments__image">
+                                <img src="img/equipment/equipment6.png" alt="equipment6">
+                            </div>
+                            <!-- /.equipment__image -->
+                            <p class="equipments__text">Бизнес подарок.</p>
+                            <!-- /.equipment__text -->
+                        </div>
+                        <!-- /.equipment -->
+                        <div class="equipments">
+                            <div class="equipments__image">
+                                <img src="img/equipment/equipment5.png" alt="equipment5">
+                            </div>
+                            <!-- /.equipment__image -->
+                            <p class="equipments__text">Дополнить интерьер.</p>
+                            <!-- /.equipment__text -->
+                        </div>
+                        <!-- /.equipment -->
+                    </div>
+                    <!-- /.equipments -->
                 </div>
             </section>
         </main>
