--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -510,6 +510,13 @@
                     <!-- /.equipments -->
                 </div>
             </section>
+            <section class="section-clients clients" id="clients">
+                <div class="container">
+                    <h3 class="clients__title">Наши клиенты</h3>
+                </div>
+                <!-- /.container -->
+            </section>
+            <!-- /#clients.section-clients clients -->
         </main>
     </div>
     <!-- /.wrapper -->
