--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -513,6 +513,56 @@
             <section class="section-clients clients" id="clients">
                 <div class="container">
                     <h3 class="clients__title">Наши клиенты</h3>
+                    <div class="responsive">
+                        <div class="responsive__item">
+                            <img src="img/client/client1.jpg" alt="client1" class="responsive__image">
+                        </div>
+                        <!-- /.responsive__item -->
+                        <div class="responsive__item">
+                            <img src="img/client/client2.jpg" alt="client2" class="responsive__image">
+                        </div>
+                        <!-- /.responsive__item -->
+                        <div class="responsive__item">
+                            <img src="img/client/client3.jpg" alt="client3" class="responsive__image">
+                        </div>
+                        <!-- /.responsive__item -->
+                        <div class="responsive__item">
+                            <img src="img/client/client4.jpg" alt="client4" class="responsive__image">
+                        </div>
+                        <!-- /.responsive__item -->
+                        <div class="responsive__item">
+                            <img src="img/client/client5.jpg" alt="5" class="responsive__image">
+                        </div>
+                        <!-- /.responsive__item -->
+                        <div class="responsive__item">
+                            <img src="img/client/client1.jpg" alt="client1" class="responsive__image">
+                        </div>
+                        <!-- /.responsive__item -->
+                        <div class="responsive__item">
+                            <img src="img/client/client2.jpg" alt="client2" class="responsive__image">
+                        </div>
+                        <!-- /.responsive__item -->
+                        <div class="responsive__item">
+                            <img src="img/client/client3.jpg" alt="client3" class="responsive__image">
+                        </div>
+                        <!-- /.responsive__item -->
+                        <div class="responsive__item">
+                            <img src="img/client/client4.jpg" alt="client4" class="responsive__image">
+                        </div>
+                        <!-- /.responsive__item -->
+                        <div class="responsive__item">
+                            <img src="img/client/client5.jpg" alt="5" class="responsive__image">
+                        </div>
+                        <!-- /.responsive__item -->
+                    </div>
+                    <div class="arrows responsive__arrow">
+                        <div class="left__arrow">
+                            <img src="img/projects/arrow_left.png" alt="arrow_left">
+                        </div>
+                        <div class="right__arrow">
+                            <img src="img/projects/arrow_right.png" alt="arrow_right">
+                        </div>
+                    </div>
                 </div>
                 <!-- /.container -->
             </section>
