--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -555,12 +555,14 @@
                         </div>
                         <!-- /.responsive__item -->
                     </div>
-                    <div class="arrows responsive__arrow">
-                        <div class="left__arrow">
-                            <img src="img/projects/arrow_left.png" alt="arrow_left">
-                        </div>
-                        <div class="right__arrow">
-                            <img src="img/projects/arrow_right.png" alt="arrow_right">
+                    <div class="wrap-slide">
+                        <div class="arrows responsive__arrow">
+                            <div class="arrows-left__arrow">
+                                <img src="img/projects/arrow_left.png" alt="arrow_left">
+                            </div>
+                            <div class="arrows-right__arrow">
+                                <img src="img/projects/arrow_right.png" alt="arrow_right">
+                            </div>
                         </div>
                     </div>
                 </div>
