--- a/src/index.html
+++ b/src/index.html
@@ -570,9 +570,9 @@
             </section>
             <!-- /#clients.section-clients clients -->
             <footer class="section-contacts contacts" id="contacts">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1119.862144548339!2d37.53713118366424!3d55.85009906225264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b537bf9668ac29%3A0x18dfd9d5b810d58b!2z0JDQstGC0L7QvNC-0YLQvtGA0L3QsNGPINGD0LsuLCA00JAg0YHRgtGA0L7QtdC90LjQtSAyMSwg0JzQvtGB0LrQstCwLCDQoNC-0YHRgdC40Y8sIDEyNTQzOA!5e0!3m2!1sru!2sua!4v1553111377147"
-                    width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <div class="map-show-on-click" data-map-height="400" data-map="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1119.862144548339!2d37.53713118366424!3d55.85009906225264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b537bf9668ac29%3A0x18dfd9d5b810d58b!2z0JDQstGC0L7QvNC-0YLQvtGA0L3QsNGPINGD0LsuLCA00JAg0YHRgtGA0L7QtdC90LjQtSAyMSwg0JzQvtGB0LrQstCwLCDQoNC-0YHRgdC40Y8sIDEyNTQzOA!5e0!3m2!1sru!2sua!4v1553111377147">
+                    <img src="img/footer/map.jpg" alt="map">
+                </div>
             </footer>
         </main>
     </div>
@@ -581,7 +581,7 @@
     <!-- <script src="js/jquery.validate.min.js"></script> -->
     <!-- <script src="js/jquery.maskedinput.min.js"></script> -->
     <!-- <script src="js/jquery.validate.min.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> 
     <script src="js/script.js"></script>
 </body>
 </html>
