--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -572,7 +572,7 @@
             <footer class="contacts" id="contacts">
                 <div class="ymap-container">
                     <div class="loader loader-default"></div>
-                    <div id="map-yandex"></div>
+                    <div class="map" id="map-yandex"></div>
                 </div>
             </footer>
         </main>
