--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -574,6 +574,12 @@
                     <div class="loader loader-default"></div>
                     <div class="map" id="map-yandex"></div>
                 </div>
+                <div class="contacts-section">
+                    <div class="contacts-left">
+                        <p class="contacts__address">г. Москва, Автомоторная улица, 4А, стр.21</p>
+                    </div>
+                    <div class="contacts-right"></div>
+                </div>
             </footer>
         </main>
     </div>
