--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -575,10 +575,17 @@
                     <div class="map" id="map-yandex"></div>
                 </div>
                 <div class="contacts-section">
-                    <div class="contacts-left">
-                        <p class="contacts__address">г. Москва, Автомоторная улица, 4А, стр.21</p>
+                    <div class="container">
+                        <div class="contacts-left">
+                            <p class="contacts__address">г. Москва,<br> Автомоторная улица, 4А, стр.21</p>
+                        </div>
+                        <div class="contacts-right">
+                            <div class="footer-contact">
+                                <a href="tel:8800891-33-33" class="footer-contact__phone">8 800 891-33-33</a>
+                                <button class="button-callback footer-contact__callback">Заказать обратный звонок</button>
+                            </div>
+                        </div>
                     </div>
-                    <div class="contacts-right"></div>
                 </div>
             </footer>
         </main>
