--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=(ca954d3d-7686-48ad-83d2-18b3b60643d8)&lang=ru_RU))&lang=ru_RU"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -570,10 +571,11 @@
             </section>
             <!-- /#clients.section-clients clients -->
             <footer class="contacts" id="contacts">
-                <div class="ymap-container">
+                <!-- <div class="ymap-container">
                     <div class="loader loader-default"></div>
                     <div class="map" id="map-yandex"></div>
-                </div>
+                </div> -->
+                <div class="map" id="map"></div>
                 <div class="contacts-section">
                     <div class="container">
                         <div class="contacts-left">
