--- a/src/index.html
+++ b/src/index.html
@@ -575,7 +575,8 @@
                     <div class="loader loader-default"></div>
                     <div class="map" id="map-yandex"></div>
                 </div> -->
-                <div class="map" id="map"></div>
+                <!-- <div class="map" id="map"></div> -->
+                <script charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A0e012efda4403b1e10a7e4714f9aca8f22c41229bcb8001494ed11896abe9a8b&amp;width=100%25&amp;height=422&amp;lang=ru_UA&amp;scroll=false"></script>
                 <div class="contacts-section">
                     <div class="container">
                         <div class="contacts-left">
