--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -591,6 +591,25 @@
                     </div>
                 </div>
             </footer>
+
+            <div class="mask"></div>
+            <div class="modal">
+                <div class="modal-form">
+                    <button class="modal-form__close">&times;</button>
+                    <form action="#" class="form modal__form" id="modal-form" method="POST">
+                        <div class="modal__form-block">
+                            <input type="text" name="user_name" class="input modal__input" placeholder="Ваше имя">
+                        </div>
+                        <div class="modal__form-block">
+                            <input type="tel" name="user_phone" class="input modal__input phone" placeholder="Контактный телефон">
+                        </div>
+                        <div class="modal__form-block">
+                            <input type="email" name="user_email" class="input modal__input" placeholder="Электронная почта">
+                        </div>
+                        <button class="button modal__button" type="submit">Оставить заявку</button>
+                    </form>
+                </div>
+            </div>
         </main>
     </div>
     <!-- /.wrapper -->
