--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="https://api-maps.yandex.ru/2.1/?apikey=(ca954d3d-7686-48ad-83d2-18b3b60643d8)&lang=ru_RU))&lang=ru_RU"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -571,12 +570,10 @@
             </section>
             <!-- /#clients.section-clients clients -->
             <footer class="contacts" id="contacts">
-                <!-- <div class="ymap-container">
-                    <div class="loader loader-default"></div>
-                    <div class="map" id="map-yandex"></div>
-                </div> -->
-                <!-- <div class="map" id="map"></div> -->
-                <script charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A0e012efda4403b1e10a7e4714f9aca8f22c41229bcb8001494ed11896abe9a8b&amp;width=100%25&amp;height=422&amp;lang=ru_UA&amp;scroll=false"></script>
+                <div class="map-show" data-map-height="422"
+                    data-map="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1119.862144548339!2d37.53713118366424!3d55.85009906225264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b537bf9668ac29%3A0x18dfd9d5b810d58b!2z0JDQstGC0L7QvNC-0YLQvtGA0L3QsNGPINGD0LsuLCA00JAg0YHRgtGA0L7QtdC90LjQtSAyMSwg0JzQvtGB0LrQstCwLCDQoNC-0YHRgdC40Y8sIDEyNTQzOA!5e0!3m2!1sru!2sua!4v1553111377147">
+                    <img src="img/footer/map.jpg" alt="map">
+                </div>
                 <div class="contacts-section">
                     <div class="container">
                         <div class="contacts-left">
