--- a/src/index.html
+++ b/src/index.html
@@ -572,7 +572,7 @@
             <footer class="contacts" id="contacts">
                 <div class="map-show" data-map-height="422"
                     data-map="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1119.862144548339!2d37.53713118366424!3d55.85009906225264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b537bf9668ac29%3A0x18dfd9d5b810d58b!2z0JDQstGC0L7QvNC-0YLQvtGA0L3QsNGPINGD0LsuLCA00JAg0YHRgtGA0L7QtdC90LjQtSAyMSwg0JzQvtGB0LrQstCwLCDQoNC-0YHRgdC40Y8sIDEyNTQzOA!5e0!3m2!1sru!2sua!4v1553111377147">
-                    <img src="img/footer/map.jpg" alt="map">
+                    <div class="map"></div>
                 </div>
                 <div class="contacts-section">
                     <div class="container">
